--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
   },
   "homepage": "https://github.com/seifChamsi/HEYMYCHIFO#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0"
   }
 }
